refactor: Update project name and improve DevTools blocking
Updates the project name from "login-boaterra" to "radar-de-leads" across package.json, index.html, and metadata.json.

Enhances the DevTools blocking mechanism in index.tsx by:
- Correcting keyboard shortcut detection to be case-insensitive.
- Implementing a more robust page wipe and stop function when DevTools are detected.
- Ensuring the blocking logic only runs on desktop devices.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radar de Leads - Grupo Boaterra</title>
+    <title>Radar de Leads</title>
     <link rel="icon" href="https://aisfizoyfpcisykarrnt.supabase.co/storage/v1/object/public/imagens/LOGO%20TRIAD3%20.png" type="image/jpeg">
-    <meta name="description" content="Radar de Leads - Sistema de Login Futurístico - Triad3" />
+    <meta name="description" content="Radar de Leads - Triad3" />
     <meta name="author" content="Triad3" />
 
     <meta property="og:title" content="Triad3 - Radar de Leads" />
-    <meta property="og:description" content="Radar de Leads - Grupo Boaterra" />
+    <meta property="og:description" content="Radar de Leads" />
     <meta property="og:type" content="website" />
 
     <!-- Fontes Futurísticas -->
